--- a/index.html
+++ b/index.html
@@ -40,3 +40,29 @@
         </div>
     </div>
 </div>
+  <!-- services section -->
+  <div class="container-fluid " id="service">
+    <div class="row">
+        <div class="col text-center">
+            <h1>SERVICES</h1>
+            <P>Before we sign a contract or write a line of code, our team will spend the necessary time needed to
+                understand your product vision<br></P>
+            <p>The outcome of this scoping session is proposal or high-level statement of work.<br>based on your
+                requirements,we can provide a complete offering or just the pieces you need.</p>
+        </div>
+    </div>
+</div>
+  <!-- what we do -->
+  <div class="container specific ">
+    <h1 class="text-center what ">What we do</h1>
+    <div class="row text-center">
+        <div class="col-md-4 main">
+            <img src="./images/services_icons/design_icon.png" class="show img-fluid">
+            <h5><strong>DESIGN</strong></h5>
+            <div class="hide">
+                <p> Our design practice offers a full range of services including brand strategy,interaction and
+                    visual design and user experience testing.</p>
+                <p>Throughout yuor project,our designers create and implement visual design and workflows,solicit
+                    user feedback and work with you to make sure what gets built is what is needed.</p>
+            </div>
+        </div>
