--- a/index.html
+++ b/index.html
@@ -108,3 +108,37 @@
                     <p class="ptag font-weight-bold text-uppercase">Design <br>Kenya</p>
                 </div>
             </div>
+            <div class="card">
+                <img src="images/portfolio/work1.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Weather <br>Informer</p>
+                </div>
+            </div>
+        </div>
+        <div class="card-deck text-center">
+            <div class="card">
+                <img src="images/portfolio/work5.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Lets <br>Chat</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="images/portfolio/work6.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Mobile <br>Application</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="images/portfolio/work7.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Mock-up <br>Kenya</p>
+                </div>
+            </div>
+            <div class="card">.
+                <img src="images/portfolio/work8.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Giraffe <br>Restaurant</p>
+                </div>
+            </div>
+        </div>
+    </div>
