add link section

--- a/index.html
+++ b/index.html
@@ -171,3 +171,4 @@
             <img src="./images/social_icons/twitter.png" alt="" class="all" srcset="">
             <img src="./images/social_icons/you_tube.png" alt="" class="all" srcset="">
         </div>
+    </section>
