add javascript stylesheet

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/mdb.css" type="text/css">
     <link rel="icon" href="https://pbs.twimg.com/profile_images/586721470635708416/u7nZ1mr6.png" type="images/icon">
     <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
   <!-- main landing page -->
@@ -62,7 +63,7 @@
             <div class="hide">
                 <p> Our design practice offers a full range of services including brand strategy,interaction and
                     visual design and user experience testing.</p>
-                <p>Throughout yuor project,our designers create and implement visual design and workflows,solicit
+                <p>Throughout your project,our designers create and implement visual design and workflows,solicit
                     user feedback and work with you to make sure what gets built is what is needed.</p>
             </div>
         </div>
