--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="./css/styles.css" type="text/css">
     <link rel="stylesheet" href="./css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="./css/mdb.css" type="text/css">
-    <link rel="icon" href="https://pbs.twimg.com/profile_images/586721470635708416/u7nZ1mr6.png" type="images/icon">
+    <link rel="icon" href="https://pbs.twim6bg.com/profile_images/586721470635708416/u7nZ1mr6.png" type="images/icon">
     <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
   <!-- main landing page -->
-  <div class="container-fluid" id="hed">
+  <div class="container-fluid" id="head">
     <div class="row">
         <div class="col-md-12 text-center " id="first">
-            <img src="./images/logo/logo.png" class="img-fluid " class="image1" alt="">
-            <h1><span class="space">WELCOME</span></h1>
+            <img src="./images/logo.png" class="img-fluid " class="image1" alt="">
+            <h1><span class="space">WELCOME</span></h1> == $0
             <h1>TO DELANI STUDIO</h1>
             <p><span id="pple">AN AMAZING PEOPLE ARE MAKING AN AMAZING DESIGN IN A FUN ENVIRONMENT</span> </p>
         </div>
@@ -58,7 +58,7 @@
     <h1 class="text-center what ">What we do</h1>
     <div class="row text-center">
         <div class="col-md-4 main">
-            <img src="./images/services_icons/design_icon.png" class="show img-fluid">
+            <img src="./images/design_icon.png" class="show img-fluid">
             <h5><strong>DESIGN</strong></h5>
             <div class="hide">
                 <p> Our design practice offers a full range of services including brand strategy,interaction and
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="col-md-4 main">
-            <img src="./images/services_icons/dev_icon.png" class="show img-fluid">
+            <img src="./images/dev_icon.png" class="show img-fluid">
             <h5><strong>DEVELOPMENT</strong></h5>
             <div class="hide">
                 <P>All engineers are fluent in the latest enterprise, mobile and web development technologies. They
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="col-md-4 main">
-                <img src="./images/services_icons/product_icon.png" class="show img-fluid">
+                <img src="./images/product_icon.png" class="show img-fluid">
                 <h5><strong>PRODUCT MANAGEMENT</strong></h5>
                 <div class="hide">
                     <p>Planning and development is iterative. Because we are constantly coding and testing, the products
@@ -92,25 +92,25 @@
         <h1 class="text-center">Portfolio</h1>
         <div class="card-deck text-center">
             <div class="card">
-                <img src="images/portfolio/work4.jpg" class="img-fluid" alt="">
+                <img src="images/work4.jpg" class="img-fluid" alt="">
                 <div class="card-1">
                     <p class="ptag font-weight-bold text-uppercase">Design <br>Kenya</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/portfolio/work3.jpg" class="img-fluid" alt="">
+                <img src="images/work3.jpg" class="img-fluid" alt="">
                 <div class="card-1">
                     <p class="ptag font-weight-bold text-uppercase">Ontario <br> security</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/portfolio/work2.jpg" class="img-fluid" alt="">
+                <img src="images/work2.jpg" class="img-fluid" alt="">
                 <div class="card-1">
                     <p class="ptag font-weight-bold text-uppercase">Design <br>Kenya</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/portfolio/work1.jpg" class="img-fluid" alt="">
+                <img src="images/work1.jpg" class="img-fluid" alt="">
                 <div class="card-1">
                     <p class="ptag font-weight-bold text-uppercase">Weather <br>Informer</p>
                 </div>
@@ -118,25 +118,25 @@
         </div>
         <div class="card-deck text-center">
             <div class="card">
-                <img src="images/portfolio/work5.jpg" class="img-fluid" alt="">
+                <img src="images/work5.jpg" class="img-fluid" alt="">
                 <div class="card-1">
                     <p class="ptag font-weight-bold text-uppercase">Lets <br>Chat</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/portfolio/work6.jpg" class="img-fluid" alt="">
+                <img src="images/work6.jpg" class="img-fluid" alt="">
                 <div class="card-1">
                     <p class="ptag font-weight-bold text-uppercase">Mobile <br>Application</p>
                 </div>
             </div>
             <div class="card">
-                <img src="images/portfolio/work7.jpg" class="img-fluid" alt="">
+                <img src="images/work7.jpg" class="img-fluid" alt="">
                 <div class="card-1">
                     <p class="ptag font-weight-bold text-uppercase">Mock-up <br>Kenya</p>
                 </div>
             </div>
             <div class="card">.
-                <img src="images/portfolio/work8.jpg" class="img-fluid" alt="">
+                <img src="images/work8.jpg" class="img-fluid" alt="">
                 <div class="card-1">
                     <p class="ptag font-weight-bold text-uppercase">Giraffe <br>Restaurant</p>
                 </div>
@@ -156,26 +156,26 @@
       <!-- links section -->
       <section class="links text-center">
         <div class="  text-center   social">
-            <a href="https://www.behance.net/" target="_blank"><img src="./images/social_icons/behance.png" class="all"
+            <a href="https://www.behance.net/" target="_blank"><img src="./images/behance.png" class="all"
                     alt="" srcset=""></a>
-            <a href="https://dribbble.com/" target="_blank"><img src="./images/social_icons/dribble.png" class="all"
+            <a href="https://dribbble.com/" target="_blank"><img src="./images/dribble.png" class="all"
                     alt="" srcset=""></a>
-            <a href="https://www.facebook.com/" target="_blank"><img src="./images/social_icons/facebook.png"
+            <a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook.png"
                     class="all" alt="" srcset=""></a>
-            <a href="https://www.flickr.com/" target="_blank"><img src="./images/social_icons/flickr.png" class="all"
+            <a href="https://www.flickr.com/" target="_blank"><img src="./images/flickr.png" class="all"
                     alt="" srcset=""></a>
             <a href="https://aboutme.google.com/u/0/?referer=gplus" target="_blank"><img
-                    src="./images/social_icons/g_plus.png" class="all" alt="" srcset=""></a>
-            <img src="./images/social_icons/pinterest.png" class="all" alt="" srcset="">
-            <img src="./images/social_icons/skype.png" alt="" class="all" srcset="">
-            <img src="./images/social_icons/stumble_upon.png" class="all" alt="" srcset="">
-            <img src="./images/social_icons/twitter.png" alt="" class="all" srcset="">
-            <img src="./images/social_icons/you_tube.png" alt="" class="all" srcset="">
+                    src="./images/g_plus.png" class="all" alt="" srcset=""></a>
+            <img src="./images/pinterest.png" class="all" alt="" srcset="">
+            <img src="./images/skype.png" alt="" class="all" srcset="">
+            <img src="./images/stumble_upon.png" class="all" alt="" srcset="">
+            <img src="./images/twitter.png" alt="" class="all" srcset="">
+            <img src="./images/you_tube.png" alt="" class="all" srcset="">
         </div>
     </section>
       <!-- footer -->
       <div class=" footer text-center">
-        <p>DELANI STUDIO<br>2019</p>
+        <p>DELANI STUDIO<br>2021</p>
     </div>
     <script src="./javascript/jquery-3.4.1.js"></script>
     <script src="./javascript/bootstrap.js"></script>
