Add css styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container-fluid" id="head">
     <div class="row">
         <div class="col-md-12 text-center " id="first">
-            <img src="./images/logo.png" class="img-fluid " class="image1" alt="">
+            <img src="./images/logo.png" class="img-fluid " class="image1" alt="logo" id="logo">
             <h1><span class="space">WELCOME</span></h1> == $0
             <h1>TO DELANI STUDIO</h1>
             <p><span id="pple">AN AMAZING PEOPLE ARE MAKING AN AMAZING DESIGN IN A FUN ENVIRONMENT</span> </p>
@@ -93,6 +93,7 @@
         <div class="card-deck text-center">
             <div class="card">
                 <img src="images/work4.jpg" class="img-fluid" alt="">
+                <p id="overlay" class="text" style="display: none;">Black Studio</p> == $0
                 <div class="card-1">
                     <p class="ptag font-weight-bold text-uppercase">Design <br>Kenya</p>
                 </div>
