--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="row">
         <div class="col-md-12 text-center " id="first">
             <img src="./images/logo.png" class="img-fluid " class="image1" alt="logo" id="logo">
-            <h1><span class="space">WELCOME</span></h1> == $0
+            <h1><span class="space">WELCOME</span></h1>
             <h1>TO DELANI STUDIO</h1>
             <p><span id="pple">AN AMAZING PEOPLE ARE MAKING AN AMAZING DESIGN IN A FUN ENVIRONMENT</span> </p>
         </div>
         <div class="col-md-12 text-center" id="last">
-           <a href="#about"><img src="./images/mouse_click.png" class="mouse animated bounceIn infinite" class="image2" alt=""></a> 
+            <a href="#about"><img src="images/mouse_click.png" class="mx-auto d-block click" alt="mouse click" id="bounce"></a>
         </div>
     </div>
 </div>
@@ -54,21 +54,40 @@
     </div>
 </div>
   <!-- what we do -->
-  <div class="container specific ">
-    <h1 class="text-center what ">What we do</h1>
-    <div class="row text-center">
-        <div class="col-md-4 main">
-            <img src="./images/design_icon.png" class="show img-fluid">
-            <h5><strong>DESIGN</strong></h5>
-            <div class="hide">
-                <p> Our design practice offers a full range of services including brand strategy,interaction and
-                    visual design and user experience testing.</p>
-                <p>Throughout your project,our designers create and implement visual design and workflows,solicit
-                    user feedback and work with you to make sure what gets built is what is needed.</p>
-            </div>
-        </div>
-        <div class="col-md-4 main">
-            <img src="./images/dev_icon.png" class="show img-fluid">
+  <div class="col-md-12">
+    <div class="row">
+        <figure class="col-md-4">
+            <img src="images/design_icon.png" alt="services-icons" class="service-icons des">
+            <figcaption id="destxt" class="b-text">DESIGN</figcaption>
+            <br>
+            <p id="desp" class="b-text">Our design practice offers a full range of services including brand strategy,
+                interaction and
+                visual design and user experience testing.
+                Throughout your project, our designers create and implement visual design and workflows, solicit
+                user feedback and work with you to make sure what gets built is what is needed.</p>
+        </figure>
+        <figure class="col-md-4">
+            <img src="images/dev_icon.png" alt="services-icons" class="service-icons dev">
+            <figcaption id="devtext" class="b-text">DEVELOPMENT</figcaption>
+            <br>
+            <p id="devp" class="b-text">All engineers are fluent in the latest enterprise, mobile and web development
+                technologies.
+                They collaborate with your team to write, and improve code on a daily basis, using proven
+                practices such as test-driven development and pair programming.</p>
+        </figure>
+        <figure class="col-md-4">
+            <img src="images/product_icon.png" alt="services-icons" class="service-icons pro">
+            <figcaption id="protext" class="b-text">PRODUCT DESIGN</figcaption>
+            <br>
+            <p id="prop" class="b-text">Planning and development is iterative. Because we are constantly coding and testing,
+                the products
+                we build are always ready to go live.
+                This iterative process allows for changes as business requirements evolve.</p>
+        </figure>
+    </div>
+</div>
+</div>
+<div class="portfolio container-fluid">
             <h5><strong>DEVELOPMENT</strong></h5>
             <div class="hide">
                 <P>All engineers are fluent in the latest enterprise, mobile and web development technologies. They
@@ -88,62 +107,22 @@
         </div>
     </div>
       <!-- portfolio section -->
-      <div class="container-fluid" id="portfolio">
-        <h1 class="text-center">Portfolio</h1>
-        <div class="card-deck text-center">
-            <div class="card">
-                <img src="images/work4.jpg" class="img-fluid" alt="">
-                <p id="overlay" class="text" style="display: none;">Black Studio</p> == $0
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Design <br>Kenya</p>
+        <h1>Portfolio</h1>
+            <div class="container">
+            <div class="row">
+                <div class="col-3 column-image"><img src="images/blank.jpg"></div>
+                <div class="col-3 column-image"><img src="images/work3.jpg"></div>
+                <div class="col-3 column-image"><img src="images/work2.jpg"></div>
+                <div class="col-3 column-image"><img src="images/work1.jpg"></div>
+                </div>
+                <div class="row">
+                <div class="col-3 column-image"><img src="images/work5.jpg"></div>
+                <div class="col-3 column-image"><img src="images/work6.jpg"></div>
+                <div class="col-3 column-image"><img src="images/work7.jpg"></div>
+                <div class="col-3 column-image"><img src="images/work8.jpg"></div>
+                </div>
                 </div>
             </div>
-            <div class="card">
-                <img src="images/work3.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Ontario <br> security</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="images/work2.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Design <br>Kenya</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="images/work1.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Weather <br>Informer</p>
-                </div>
-            </div>
-        </div>
-        <div class="card-deck text-center">
-            <div class="card">
-                <img src="images/work5.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Lets <br>Chat</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="images/work6.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Mobile <br>Application</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="images/work7.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Mock-up <br>Kenya</p>
-                </div>
-            </div>
-            <div class="card">.
-                <img src="images/work8.jpg" class="img-fluid" alt="">
-                <div class="card-1">
-                    <p class="ptag font-weight-bold text-uppercase">Giraffe <br>Restaurant</p>
-                </div>
-            </div>
-        </div>
-    </div>
       <!-- contact section. -->
       <div class="container-fluid " id="contact">
         <h1 class="text-center con">CONTACT US</h1>
