--- a/index.html
+++ b/index.html
@@ -2,164 +2,207 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Delani Studio</title>
-    <link rel="stylesheet" href="./css/styles.css" type="text/css">
-    <link rel="stylesheet" href="./css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="./css/mdb.css" type="text/css">
-    <link rel="icon" href="https://pbs.twim6bg.com/profile_images/586721470635708416/u7nZ1mr6.png" type="images/icon">
-    <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="js/script.js"></script>
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/0c3a8991fb082b831f0556fce/3af0a402a75f4953479c1801c.js");</script>
 </head>
 <body>
-  <!-- main landing page -->
-  <div class="container-fluid" id="head">
-    <div class="row">
-        <div class="col-md-12 text-center " id="first">
-            <img src="./images/logo.png" class="img-fluid " class="image1" alt="logo" id="logo">
-            <h1><span class="space">WELCOME</span></h1>
-            <h1>TO DELANI STUDIO</h1>
-            <p><span id="pple">AN AMAZING PEOPLE ARE MAKING AN AMAZING DESIGN IN A FUN ENVIRONMENT</span> </p>
-        </div>
-        <div class="col-md-12 text-center" id="last">
+<div class="container-fluid">
+    <div class="jumbotron-fluid">
+        <div class="overlay">
+            <img src="images/logo.png" alt="logo" class="mx-auto d-block">
+            <h1 class="text-white text-center welcome h-text">Welcome</h1>
+            <h1 class="text-white text-center delani h-text">TO DELANI STUDIO</h1>
+            <h6 class="text-white text-center text h-text smaller-text">AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
+                ENVIRONMENT</h6>
             <a href="#about"><img src="images/mouse_click.png" class="mx-auto d-block click" alt="mouse click" id="bounce"></a>
         </div>
     </div>
-</div>
-  <!-- about us section -->
-  <div class="container" id="about">
-    <div class="row">
-        <div class=" text-center">
-            <h1>ABOUT US</h1>
-            <p class="resize">When you work with us, you are part of a team of committed collaborators. All aspects
-                of our software development process are intergrated,interactive<br> and agile.</p>
-            <p class="resize">Our approach unifies design,development and product management to create exceptional
-                products.<br>We start each project by understanding your business goals, the user's need and the
-                product requirements<br>Then we help translate them into effective and elegant solutions.
-            </p>
+    <div class="about" id="about">
+        <h1 class="text-center b-text" >ABOUT US</h1><br>
+        <p class="text-center m-text">When you work with us, you are a part of a team of committed collaborators. All
+            aspects of our software development process are integrated, interactive and agile
+        </p>
+        <p class="text-center m-text">Our approach unifies design, development and product management to create exceptional
+            products.</p>
+        <p class="text-center m-text">We start each project by understanding your business goals, the user's needs
+            and the product requirements.<br> Then we help them translate into effective
+            and elegant solutions.
+        </p>
+    </div>
+    <div class="services">
+        <div class="small-overlay">
+            <h1 class="text-center text-white s-text b-text">SERVICES</h1><br><br>
+            <p class="text-center text-white m-text">Before we sign or write a line of code our team will spend the necessary time needed to understand your product vision.<br>The outcome of this scoping
+                session is a
+                proposal or high level statement of work.<br>Based on your requirements, we can provide a
+                complete offering or just the pieces you need.</p>
         </div>
     </div>
-</div>
-  <!-- services section -->
-  <div class="container-fluid " id="service">
-    <div class="row">
-        <div class="col text-center">
-            <h1>SERVICES</h1>
-            <P>Before we sign a contract or write a line of code, our team will spend the necessary time needed to
-                understand your product vision<br></P>
-            <p>The outcome of this scoping session is proposal or high-level statement of work.<br>based on your
-                requirements,we can provide a complete offering or just the pieces you need.</p>
-        </div>
-    </div>
-</div>
-  <!-- what we do -->
-  <div class="col-md-12">
-    <div class="row">
-        <figure class="col-md-4">
-            <img src="images/design_icon.png" alt="services-icons" class="service-icons des">
-            <figcaption id="destxt" class="b-text">DESIGN</figcaption>
-            <br>
-            <p id="desp" class="b-text">Our design practice offers a full range of services including brand strategy,
-                interaction and
-                visual design and user experience testing.
-                Throughout your project, our designers create and implement visual design and workflows, solicit
-                user feedback and work with you to make sure what gets built is what is needed.</p>
-        </figure>
-        <figure class="col-md-4">
-            <img src="images/dev_icon.png" alt="services-icons" class="service-icons dev">
-            <figcaption id="devtext" class="b-text">DEVELOPMENT</figcaption>
-            <br>
-            <p id="devp" class="b-text">All engineers are fluent in the latest enterprise, mobile and web development
-                technologies.
-                They collaborate with your team to write, and improve code on a daily basis, using proven
-                practices such as test-driven development and pair programming.</p>
-        </figure>
-        <figure class="col-md-4">
-            <img src="images/product_icon.png" alt="services-icons" class="service-icons pro">
-            <figcaption id="protext" class="b-text">PRODUCT DESIGN</figcaption>
-            <br>
-            <p id="prop" class="b-text">Planning and development is iterative. Because we are constantly coding and testing,
-                the products
-                we build are always ready to go live.
-                This iterative process allows for changes as business requirements evolve.</p>
-        </figure>
-    </div>
-</div>
-</div>
-<div class="portfolio container-fluid">
-            <h5><strong>DEVELOPMENT</strong></h5>
-            <div class="hide">
-                <P>All engineers are fluent in the latest enterprise, mobile and web development technologies. They
-                    collaborate with your team to write, and improve code on a daily basis, using proven practices
-                    such as test-driven development and pair programming. </P>
-                </div>
-            </div>
-            <div class="col-md-4 main">
-                <img src="./images/product_icon.png" class="show img-fluid">
-                <h5><strong>PRODUCT MANAGEMENT</strong></h5>
-                <div class="hide">
-                    <p>Planning and development is iterative. Because we are constantly coding and testing, the products
-                        we build are always ready to go live. This iterative process allows for changes as business
-                        requirements evolve.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-      <!-- portfolio section -->
-        <h1>Portfolio</h1>
-            <div class="container">
+    <div class="what-we-do text-center">
+        <h1 class="b-text">WHAT WE DO</h1><br><br>
+        <div class="col-md-12">
             <div class="row">
-                <div class="col-3 column-image"><img src="images/blank.jpg"></div>
-                <div class="col-3 column-image"><img src="images/work3.jpg"></div>
-                <div class="col-3 column-image"><img src="images/work2.jpg"></div>
-                <div class="col-3 column-image"><img src="images/work1.jpg"></div>
-                </div>
-                <div class="row">
-                <div class="col-3 column-image"><img src="images/work5.jpg"></div>
-                <div class="col-3 column-image"><img src="images/work6.jpg"></div>
-                <div class="col-3 column-image"><img src="images/work7.jpg"></div>
-                <div class="col-3 column-image"><img src="images/work8.jpg"></div>
-                </div>
-                </div>
+                <figure class="col-md-4">
+                    <img src="images/design_icon.png" alt="services-icons" class="service-icons des">
+                    <figcaption id="destxt" class="b-text">DESIGN</figcaption>
+                    <br>
+                    <p id="desp" class="b-text">Our design practice offers a full range of services including brand strategy,
+                        interaction and
+                        visual design and user experience testing.
+                        Throughout your project, our designers create and implement visual design and workflows, solicit
+                        user feedback and work with you to make sure what gets built is what is needed.</p>
+                </figure>
+                <figure class="col-md-4">
+                    <img src="images/dev_icon.png" alt="services-icons" class="service-icons dev">
+                    <figcaption id="devtext" class="b-text">DEVELOPMENT</figcaption>
+                    <br>
+                    <p id="devp" class="b-text">All engineers are fluent in the latest enterprise, mobile and web development
+                        technologies.
+                        They collaborate with your team to write, and improve code on a daily basis, using proven
+                        practices such as test-driven development and pair programming.</p>
+                </figure>
+                <figure class="col-md-4">
+                    <img src="images/product_icon.png" alt="services-icons" class="service-icons pro">
+                    <figcaption id="protext" class="b-text">PRODUCT DESIGN</figcaption>
+                    <br>
+                    <p id="prop" class="b-text">Planning and development is iterative. Because we are constantly coding and testing,
+                        the products
+                        we build are always ready to go live.
+                        This iterative process allows for changes as business requirements evolve.</p>
+                </figure>
             </div>
-      <!-- contact section. -->
-      <div class="container-fluid " id="contact">
-        <h1 class="text-center con">CONTACT US</h1>
-        <form action="" class="form-cont">
-            <input type="text" name="" id="nameDetail" placeholder="Enter Name" required>
-            <input type="email" name="" id="" placeholder="Enter Email" required>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Enter Message"></textarea><br>
-            <button type="submit " class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-      <!-- links section -->
-      <section class="links text-center">
-        <div class="  text-center   social">
-            <a href="https://www.behance.net/" target="_blank"><img src="./images/behance.png" class="all"
-                    alt="" srcset=""></a>
-            <a href="https://dribbble.com/" target="_blank"><img src="./images/dribble.png" class="all"
-                    alt="" srcset=""></a>
-            <a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook.png"
-                    class="all" alt="" srcset=""></a>
-            <a href="https://www.flickr.com/" target="_blank"><img src="./images/flickr.png" class="all"
-                    alt="" srcset=""></a>
-            <a href="https://aboutme.google.com/u/0/?referer=gplus" target="_blank"><img
-                    src="./images/g_plus.png" class="all" alt="" srcset=""></a>
-            <img src="./images/pinterest.png" class="all" alt="" srcset="">
-            <img src="./images/skype.png" alt="" class="all" srcset="">
-            <img src="./images/stumble_upon.png" class="all" alt="" srcset="">
-            <img src="./images/twitter.png" alt="" class="all" srcset="">
-            <img src="./images/you_tube.png" alt="" class="all" srcset="">
         </div>
-    </section>
-      <!-- footer -->
-      <div class=" footer text-center">
-        <p>DELANI STUDIO<br>2021</p>
     </div>
-    <script src="./javascript/jquery-3.4.1.js"></script>
-    <script src="./javascript/bootstrap.js"></script>
-    <script src="./javascript/mdb.js"></script>
-    <script src="./javascript/script.js"></script>
+    <div class="portfolio container-fluid">
+        <br><br><br>
+        <h1 class="text-center b-text">PORTFOLIO</h1><br>
+        <div class="col-md-12 mx-auto">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-2">
+                    <div class="portimg">
+                        <img src="images/work4.jpg" alt="portfolio-images" class="image img-fluid">
+                        <div>
+                            <div class="porttext" style="display:none"> Delani Studio</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="portimg">
+                        <img src="images/work3.jpg" alt="portfolio-images" class="image img-fluid">
+                        <div>
+                            <div class="porttext" style="display:none">Delani Studio</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="portimg">
+                        <img src="images/work2.jpg" alt="portfolio-images" class="image img-fluid">
+                        <div>
+                            <div class="porttext" style="display:none">Delani Studio</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="portimg">
+                        <img src="images/work1.jpg" alt="portfolio-images" class="image img-fluid">
+                        <div class="disc1">
+                            <div class="porttext" style="display:none">Delani Studio</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-2">
+                    <div class="portimg">
+                        <img src="images/work5.jpg" alt="portfolio-images" class="image img-fluid">
+                        <div class="porttext" style="display:none">Delani Studio</div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="portimg">
+                        <img src="images/work6.jpg" alt="portfolio-images" class="image img-fluid">
+                        <div class="porttext" style="display:none">Delani Studio</div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="portimg">
+                        <img src="images/work7.jpg" alt="portfolio-images" class="image img-fluid">
+                        <div class="porttext" style="display:none">Delani Studio</div>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="portimg">
+                        <img src="images/work8.jpg" alt="portfolio-images" class="image img-fluid">
+                        <div class="porttext" style="display:none">Delani Studio</div>
+                    </div>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </div>
+    </div>
+    <div class="contacts">
+        <div class="contact-overlay">
+            <h1 class="text-center text-white b-text">CONTACT US</h1><br>
+            <div class="col-md-12 input">
+                <form id="form" onsubmit="myFunction()" action="https://gmail.us6.list-manage.com/subscribe/post" method="POST">
+
+<script>
+    function myFunction() {
+    let varName = document.getElementById("MERGE1").value;
+    //includes a line of code to auto capitalize the 1st letter of the users name.
+    const nameCaps = varName.charAt(0).toUpperCase() + varName.slice(1)
+    alert("Hey " + nameCaps + ". Thank you for reaching out to us.\nWe have received your message.\nHave a nice day");
+}
+</script>
+
+                    <div class="row">
+                        <div class="col-md-2 form"></div>
+                        <input type="hidden" name="u" value="1fd025c5cf63b91f6765d5f6a">
+    <input type="hidden" name="id" value="dd6cd63c66">
+                        <input class="col-md-4 form-control name" type="text" name="MERGE1" id="MERGE1" size="25" value="" placeholder="Name..."
+                               required><br><br>
+                        <input class="col-md-4 form-control email" type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value="" placeholder="Email..."
+                               required>
+                        <div class="col-md-2">
+                        </div>
+                    </div>
+                    <div class="row input">
+                        <div class="col-md-2"></div>
+                        <textarea class="form-control col-md-8 text" rows="12" name="MERGE2" id="MERGE2" size="25" value=""
+                                  placeholder="Your message here..."></textarea>
+                        <div class="col-md-2"></div>
+                    </div>
+                    <button class="btn btn-success mx-auto d-block submit" id="okButton" type="submit" >Submit</button>
+                    <br>
+                </form>
+            </div>
+        </div>
+    </div>
+    <br><br>
+
+    <div class="social mx-auto text-center">
+        <div class="col-md-2"></div>
+        <img src="images/twitter.png">
+        <img src="images/dribble.png">
+        <img src="images/facebook.png">
+        <img src="images/g_plus.png">
+        <img src="images/skype.png">
+        <img src="images/stumble_upon.png">
+        <img src="images/behance.png">
+        <img src="images/pinterest.png">
+        <img src="images/flickr.png">
+    </div>
+    <br>
+    <footer class="text-center">Delani Studio <br> 2019</footer>
+</div>
 </body>
+<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+<script src="js/script.js"></script>
+<script src="js/mailchimp.js"></script>
 </html>
