add updated licence text &updated css & modified html & modified js script

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     let varName = document.getElementById("MERGE1").value;
     //includes a line of code to auto capitalize the 1st letter of the users name.
     const nameCaps = varName.charAt(0).toUpperCase() + varName.slice(1)
-    alert("Hey " + nameCaps + ". Thank you for reaching out to us.\nWe have received your message.\nHave a nice day");
+    alert("Hey " + nameCaps + ". Thank you for reaching out to us.\nWe have received your message.\nStay safe Take care");
 }
 </script>
 
